--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div id="root"></div>
     
     <!-- connection to the React Mover file -->
-    <script type="module" src="/src/main/main.jsx"></script>
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
