--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
         // REPLACE THIS WITH YOUR OWN FIREBASE CONFIG FROM CONSOLE
         // If you don't replace this, the app will try to use the demo config which might fail locally.
         const firebaseConfig = {
-             // Paste your apiKey, authDomain, projectId etc here
-             // Example:
-             // apiKey: "AIzaSy...",
-             // projectId: "your-project-id",
+        apiKey: "AIzaSyD-Your-Actual-Key-Here",
+        authDomain: "creachive-app.firebaseapp.com",
+        projectId: "creachive-app",
+        storageBucket: "creachive-app.appspot.com",
+        messagingSenderId: "123456789",
+        appId: "1:123456789:web:abcdef"
+};
         };
 
         // Initialize Firebase
