--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
         // 1. Define your GitHub config here. (It is null by default)
         // WHEN YOU DEPLOY TO GITHUB, REPLACE 'null' WITH YOUR CONFIG OBJECT:
         // const githubConfig = { apiKey: "...", ... };
-        const githubConfig = null;
+        const githubConfig = {
+            apiKey: "AIzaSyAutcAiOWpnvgW7GQg_JffSj2GbzcHcjXI",
+            authDomain: "creachives.firebaseapp.com",
+            projectId: "creachives",
+            storageBucket: "creachives.firebasestorage.app",
+            messagingSenderId: "232994696822",
+            appId: "1:232994696822:web:938da2ae01525238637957",
+            measurementId: "G-0C4CZZ31XD"
+        };
 
         try {
             // Priority 1: Use GitHub config if provided by user
