--- a/index.html
+++ b/index.html
@@ -49,17 +49,12 @@
             Heart: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>,
             CheckCheck: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M18 6 7 17l-5-5"/><path d="m22 10-7.5 7.5L13 16"/></svg>,
             UserPlus: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><line x1="19" x2="19" y1="8" y2="14"/><line x1="22" x2="16" y1="11" y2="11"/></svg>,
-            ArrowLeft: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
+            ArrowLeft: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>,
+            AlertCircle: (props) => <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" x2="12" y1="8" y2="12"/><line x1="12" x2="12.01" y1="16" y2="16"/></svg>
         };
 
-        // --- FIREBASE INITIALIZATION LOGIC ---
-        const PUBLIC_DATA = 'creachive_public_v2';
-        let auth, db;
-
-        // 1. Define your GitHub config here. (It is null by default)
-        // WHEN YOU DEPLOY TO GITHUB, REPLACE 'null' WITH YOUR CONFIG OBJECT:
-        // const githubConfig = { apiKey: "...", ... };
-        const githubConfig = {
+        // --- FIREBASE CONFIGURATION ---
+        const firebaseConfig = {
             apiKey: "AIzaSyAutcAiOWpnvgW7GQg_JffSj2GbzcHcjXI",
             authDomain: "creachives.firebaseapp.com",
             projectId: "creachives",
@@ -69,24 +64,25 @@
             measurementId: "G-0C4CZZ31XD"
         };
 
-        try {
-            // Priority 1: Use GitHub config if provided by user
-            if (githubConfig) {
-                firebase.initializeApp(githubConfig);
-            } 
-            // Priority 2: Use Preview Environment config (Auto-magical!)
-            else if (typeof __firebase_config !== 'undefined') {
-                firebase.initializeApp(JSON.parse(__firebase_config));
-            } 
-            // Fallback: No config found
-            else {
-                console.warn("No Firebase config found. App will show setup screen.");
-            }
+        // --- INITIALIZE FIREBASE ---
+        let auth, db;
+        const PUBLIC_DATA = 'creachive_prod_v1';
 
-            // If initialized successfully, grab auth and db
-            if (firebase.apps.length > 0) {
+        try {
+            if (typeof firebase !== 'undefined') {
+                firebase.initializeApp(firebaseConfig);
                 auth = firebase.auth();
                 db = firebase.firestore();
+                // Enable offline persistence
+                db.enablePersistence().catch(err => {
+                    if (err.code == 'failed-precondition') {
+                        console.log("Multiple tabs open, persistence disabled");
+                    } else if (err.code == 'unimplemented') {
+                        console.log("Browser doesn't support persistence");
+                    }
+                });
+            } else {
+                console.error("Firebase SDK not loaded");
             }
         } catch (e) {
             console.error("Firebase Init Error:", e);
@@ -196,7 +192,7 @@
             );
         };
 
-        const Feed = ({ currentUser }) => {
+        const Feed = ({ currentUser, onError }) => {
             const [posts, setPosts] = useState([]);
             const [stories, setStories] = useState([]);
             const [newPostContent, setNewPostContent] = useState('');
@@ -206,21 +202,24 @@
             useEffect(() => {
                 const unsubscribe = db.collection(`${PUBLIC_DATA}_posts`)
                     .orderBy('timestamp', 'desc')
-                    .onSnapshot(snapshot => {
-                        setPosts(snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() })));
-                    });
+                    .onSnapshot(
+                        snapshot => setPosts(snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }))),
+                        error => onError(error)
+                    );
                 return () => unsubscribe();
             }, []);
 
             useEffect(() => {
                 const unsubscribe = db.collection(`${PUBLIC_DATA}_stories`)
                     .orderBy('timestamp', 'desc')
-                    .onSnapshot(snapshot => {
-                        const now = Date.now() / 1000;
-                        const allStories = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-                        // Filter stories older than 24h
-                        setStories(allStories.filter(s => (now - (s.timestamp?.seconds || 0)) < 86400));
-                    });
+                    .onSnapshot(
+                        snapshot => {
+                            const now = Date.now() / 1000;
+                            const allStories = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+                            setStories(allStories.filter(s => (now - (s.timestamp?.seconds || 0)) < 86400));
+                        },
+                        error => onError(error)
+                    );
                 return () => unsubscribe();
             }, []);
 
@@ -237,7 +236,7 @@
                         timestamp: firebase.firestore.FieldValue.serverTimestamp()
                     });
                     setNewPostContent('');
-                } catch (error) { console.error(error); }
+                } catch (error) { onError(error); }
             };
 
             const handleCreateStory = async () => {
@@ -252,7 +251,7 @@
                     });
                     setStoryText('');
                     setIsAddingStory(false);
-                } catch (e) { console.error(e); }
+                } catch (e) { onError(e); }
             };
 
             return (
@@ -335,7 +334,7 @@
             );
         };
 
-        const Messaging = ({ currentUser }) => {
+        const Messaging = ({ currentUser, onError }) => {
             const [selectedUser, setSelectedUser] = useState(null);
             const [users, setUsers] = useState([]);
             const [messages, setMessages] = useState([]);
@@ -343,10 +342,13 @@
             const messagesEndRef = useRef(null);
 
             useEffect(() => {
-                const unsubscribe = db.collection(`${PUBLIC_DATA}_users`).onSnapshot(snapshot => {
-                    const all = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-                    setUsers(all.filter(u => u.id !== currentUser.id));
-                });
+                const unsubscribe = db.collection(`${PUBLIC_DATA}_users`).onSnapshot(
+                    snapshot => {
+                        const all = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+                        setUsers(all.filter(u => u.id !== currentUser.id));
+                    },
+                    error => onError(error)
+                );
                 return () => unsubscribe();
             }, [currentUser.id]);
 
@@ -356,9 +358,10 @@
                 const unsubscribe = db.collection(`${PUBLIC_DATA}_messages`)
                     .where('chatId', '==', chatId)
                     .orderBy('timestamp', 'asc')
-                    .onSnapshot(snapshot => {
-                        setMessages(snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() })));
-                    });
+                    .onSnapshot(
+                        snapshot => setMessages(snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }))),
+                        error => onError(error)
+                    );
                 return () => unsubscribe();
             }, [selectedUser, currentUser.id]);
 
@@ -374,7 +377,7 @@
                         chatId, text, senderId: currentUser.id, senderName: currentUser.name,
                         timestamp: firebase.firestore.FieldValue.serverTimestamp()
                     });
-                } catch(e) { console.error(e); }
+                } catch(e) { onError(e); }
             };
 
             return (
@@ -397,115 +400,3 @@
                             ))}
                         </div>
                     </div>
-                    {selectedUser ? (
-                        <div className="flex-1 flex flex-col bg-[#eef1f5] h-full relative w-full">
-                            <div className="bg-white p-3 flex items-center justify-between border-b border-gray-200 shadow-sm z-10">
-                                <div className="flex items-center space-x-3">
-                                    <button onClick={() => setSelectedUser(null)} className="md:hidden text-gray-600"><Icons.ArrowLeft size={24} /></button>
-                                    <img src={selectedUser.avatar} className="w-10 h-10 rounded-full bg-gray-200" />
-                                    <div><h3 className="font-semibold text-gray-900">{selectedUser.name}</h3><div className="flex items-center space-x-1 text-xs text-green-600"><Icons.Lock size={10} /><span>Private Chat</span></div></div>
-                                </div>
-                            </div>
-                            <div className="flex-1 overflow-y-auto p-4 space-y-3">
-                                {messages.map(msg => {
-                                    const isMe = msg.senderId === currentUser.id;
-                                    return (
-                                        <div key={msg.id} className={`flex ${isMe ? 'justify-end' : 'justify-start'}`}>
-                                            <div className={`max-w-[80%] rounded-2xl px-4 py-2 shadow-sm ${isMe ? 'bg-blue-600 text-white rounded-br-none' : 'bg-white text-gray-900 rounded-bl-none'}`}>
-                                                <p className="text-sm leading-relaxed">{msg.text}</p>
-                                                <div className={`text-[10px] mt-1 flex items-center justify-end space-x-1 ${isMe ? 'text-blue-100' : 'text-gray-400'}`}><span>{msg.timestamp ? new Date(msg.timestamp.seconds * 1000).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}) : '...'}</span><Icons.CheckCheck size={14} /></div>
-                                            </div>
-                                        </div>
-                                    );
-                                })}
-                                <div ref={messagesEndRef} />
-                            </div>
-                            <div className="bg-white p-3 border-t border-gray-200">
-                                <div className="flex items-center space-x-2">
-                                    <input type="text" value={activeMessage} onChange={(e) => setActiveMessage(e.target.value)} onKeyPress={(e) => e.key === 'Enter' && handleSendMessage()} placeholder="Type message..." className="flex-1 bg-gray-100 border-0 rounded-full px-4 py-3 outline-none" />
-                                    <button onClick={handleSendMessage} className="p-3 bg-blue-600 text-white rounded-full shadow-md"><Icons.Send size={20} /></button>
-                                </div>
-                            </div>
-                        </div>
-                    ) : (
-                        <div className="hidden md:flex flex-1 flex-col items-center justify-center bg-[#f0f2f5] p-8 text-center">
-                            <div className="w-24 h-24 bg-blue-100 rounded-full flex items-center justify-center mb-6"><Icons.MessageCircle size={48} className="text-blue-600" /></div>
-                            <h2 className="text-2xl font-bold text-gray-700">Select a chat</h2>
-                        </div>
-                    )}
-                </div>
-            );
-        };
-
-        const Profile = ({ currentUser }) => (
-            <div className="flex-1 flex flex-col items-center justify-center h-screen bg-gray-50 md:ml-64 pb-20 md:pb-0 fade-in">
-                <div className="bg-white p-8 rounded-2xl shadow-sm text-center max-w-sm w-full">
-                    <div className="w-24 h-24 mx-auto mb-4 rounded-full p-1 border-2 border-blue-500"><img src={currentUser.avatar} className="w-full h-full rounded-full bg-gray-200" /></div>
-                    <h2 className="text-2xl font-bold text-gray-800">{currentUser.name}</h2>
-                    <div className="bg-gray-100 rounded-lg p-3 mt-4 mb-6"><p className="text-xs text-gray-500 uppercase tracking-wide mb-1">Server ID</p><p className="font-mono text-sm text-gray-700 break-all select-all">{currentUser.id}</p></div>
-                </div>
-            </div>
-        );
-
-        const App = () => {
-            const [user, setUser] = useState(null);
-            const [userProfile, setUserProfile] = useState(null);
-            const [activeTab, setActiveTab] = useState('feed');
-            const [loading, setLoading] = useState(true);
-
-            useEffect(() => {
-                if(!auth) return;
-                const unsub = auth.onAuthStateChanged(async (u) => {
-                    setUser(u);
-                    if (u) {
-                        const docRef = db.collection(`${PUBLIC_DATA}_users`).doc(u.uid);
-                        const snap = await docRef.get();
-                        if (snap.exists) setUserProfile({ id: u.uid, ...snap.data() });
-                        else setUserProfile(null);
-                    }
-                    setLoading(false);
-                });
-                return () => unsub();
-            }, []);
-
-            const handleJoin = async (name) => {
-                if (!user) { await auth.signInAnonymously(); }
-                const u = auth.currentUser;
-                const avatar = `https://api.dicebear.com/7.x/avataaars/svg?seed=${name}`;
-                const data = { name, avatar, joinedAt: firebase.firestore.FieldValue.serverTimestamp() };
-                await db.collection(`${PUBLIC_DATA}_users`).doc(u.uid).set(data);
-                setUserProfile({ id: u.uid, ...data });
-            };
-
-            if (!auth) return (
-                <div className="h-screen flex items-center justify-center flex-col p-4 text-center">
-                    <div className="mb-4 text-red-600 font-bold text-xl">Configuration Needed</div>
-                    <div className="text-gray-600 max-w-md bg-white p-6 rounded-xl shadow-lg">
-                        <p className="mb-4">This app needs a database to function on GitHub Pages.</p>
-                        <ol className="text-left text-sm space-y-2 list-decimal list-inside">
-                            <li>Open <strong>index.html</strong> in a text editor.</li>
-                            <li>Scroll to the <strong>GITHUB CONFIGURATION</strong> section.</li>
-                            <li>Paste your Firebase keys there.</li>
-                        </ol>
-                    </div>
-                </div>
-            );
-
-            if (loading) return <div className="h-screen flex items-center justify-center"><div className="w-12 h-12 border-4 border-blue-600 border-t-transparent rounded-full animate-spin"></div></div>;
-            if (!userProfile) return <AuthScreen onJoin={handleJoin} />;
-
-            return (
-                <div className="flex font-sans text-gray-900 bg-gray-100 min-h-screen">
-                    <Navigation activeTab={activeTab} setActiveTab={setActiveTab} currentUser={userProfile} />
-                    {activeTab === 'feed' && <Feed currentUser={userProfile} />}
-                    {activeTab === 'chats' && <Messaging currentUser={userProfile} />}
-                    {activeTab === 'profile' && <Profile currentUser={userProfile} />}
-                </div>
-            );
-        };
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
-</body>
-</html>
